# truth-checker-backend

./: Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
tests/: conftest.py
tests/api/: test_app.py
tests/domain/services/: test_fact_checking_service.py
tests/infrastructure/ai/: test_ai_factory.py  test_chatgpt_adapter.py  test_chatgpt_provider.py
tests/infrastructure/mcp/: test_factory.py  test_wikipedia_adapter.py  test_wikipedia_live.py
tests/infrastructure/stt/: test_elevenlabs_adapter.py  test_factory.py
tests/integration/: test_mcp_workflow.py
truth_checker/: __init__.py  main.py
truth_checker/api/: app.py
truth_checker/api/endpoints/: fact_check.py  health.py  live_stream.py  stt.py
truth_checker/domain/: __init__.py
truth_checker/domain/models/: __init__.py  claim.py  fact_check_result.py  live_stream_segment.py  verification.py
truth_checker/domain/ports/: __init__.py  ai_provider.py  live_stream_detector.py  live_stream_processor.py  mcp_provider.py  stt_provider.py  youtube_auth_provider.py
truth_checker/domain/services/: __init__.py  fact_checking_service.py  live_stream_processing_service.py  stream_analysis_service.py  stt_service.py  youtube_auth_service.py
truth_checker/infrastructure/: __init__.py  dependencies.py
truth_checker/infrastructure/ai/: __init__.py  chatgpt_adapter.py  chatgpt_provider.py  factory.py  youtube_api.py  youtube_live_detector_adapter.py
truth_checker/infrastructure/live_stream/: __init__.py  live_stream_processor_adapter.py
truth_checker/infrastructure/mcp/: factory.py  (+1 more)
(+5 files in other folders)
