[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truth_checker"
version = "0.1.0"
description = "AI-powered fact-checking system with MCP integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["fact-checking", "ai", "mcp", "verification"]
authors = [
    { name = "Truth Checker Team" },
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "wikipedia-api>=0.6.0",  # For Wikipedia access
    "cachetools>=5.3.0",    # For response caching
    "yt-dlp>=2025.5.22",    # For YouTube and stream audio extraction
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.10.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.3",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py310" 